# generativeart

./: .gitignore  CMakeLists.txt  readme.md
ImageGeneration/: BasicPolygons.h  CMakeLists.txt  Drawable.h  Point.h  bitmapimg.h  bmpgen.cpp  bmpgen.h  bmpheader.h  main.cpp  readme.md
ImageGeneration/include/: bitmapimg.h  bmpheader.h  ccs.h  gradient.h  gradient3.h  icolor.h  idrawable.h  line.h  plotfunction.h  point.h  polygon.h  solidcolor.h
ImageGeneration/src/: bitmapimg.cpp  bitmapimg.h  bmpheader.cpp  ccs.cpp  drawable.h  gradient.cpp  gradient.h  gradient3.cpp  gradient3.h  icolor.h  idrawable.h  line.cpp  line.h  plotfunction.cpp  point.cpp  point.h  polygon.cpp  polygon.h  solidcolor.cpp
